# libICNL

./: CMakeLists.txt  CODE_OF_CONDUCT.md  README.md
core/: CMakeLists.txt
core/include/: core.h
core/src/: core.c
core/test/: test.c
doc/: Doxyfile.in
icnlowpan/: CMakeLists.txt
icnlowpan/include/: debug.h  icnlowpan.h
icnlowpan/src/: icnlowpan.c
icnlowpan/test/: test.c
ndnlowpan/: CMakeLists.txt
ndnlowpan/include/: ndnlowpan.h
ndnlowpan/src/: ndnlowpan.c  ndnlowpan_decode.c  ndnlowpan_encode.c  ndnlowpan_util.c
ndnlowpan/test/: test.c
